@@ -1,7 +1,8 @@
 
 module Ruote
 module Dm
-  VERSION = '2.1.11'
+
+  VERSION = '2.1.12'
 end
 end
 
